Fix wrap

--- a/themes/anthropomorphic/assets/css/main.css
+++ b/themes/anthropomorphic/assets/css/main.css
@@ -118,6 +118,11 @@ body > footer {
     color: var(--pico-color);
 }
 
+footer nav ul {
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .social {
     font-size: 2em;
     line-height: 0.03125em;
